kubernetes/backstage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  labels:
    app.kubernetes.io/component: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backstage
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: backstage
          image: backstage
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
          resources:
            requests:
              cpu: "50m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          readinessProbe:
            tcpSocket:
              port: 7007
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 7007
            periodSeconds: 5
