kubernetes/backstage/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/component: redis
spec:
  selector:
    app.kubernetes.io/component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: redis
          image: redis
          ports:
          - containerPort: 6379
          resources:
            limits:
              cpu: "0.1"
