kubernetes/backstage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  labels:
    app.kubernetes.io/component: backstage
spec:
  selector:
    app.kubernetes.io/component: backstage
  ports:
    - name: http
      port: 80
      targetPort: 4180
