kubernetes/backstage/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
spec:
  ingressClassName: nginx
  rules:
    - host: backstage
      http:
        paths:
        - backend:
            service:
              name: backstage
              port:
                number: 80
          path: /
          pathType: Prefix
